--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,12 +22,18 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.24.x'
+      - name: Verify source layout
+        run: |
+          ls -1
+          test -d cmd/server || (echo "ERROR: cmd/server directory missing in repo" && exit 1)
+          grep -R "package main" -n cmd/server || true
       - name: Build
+        env:
+          CGO_ENABLED: 0
         run: |
           mkdir -p dist
-          export CGO_ENABLED=0
-          echo "Building ${GOOS}-${{ matrix.goarch }}"
-          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -ldflags "-s -w" -o dist/heheswitch-${{ matrix.goos }}-${{ matrix.goarch }} ./cmd/server
+          echo "Building ${{ matrix.goos }}-${{ matrix.goarch }}"
+          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -ldflags "-s -w -X main.commit=${{ github.sha }} -X main.buildDate=$(date -u +%Y-%m-%dT%H:%M:%SZ)" -o dist/heheswitch-${{ matrix.goos }}-${{ matrix.goarch }} ./cmd/server
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
